# _

./: .eslintrc.yml  .gitignore  CLAUDE.md  README.md  index.html  main.js  next-env.d.ts  next.config.js  output.txt  package-lock.json  package.json  renovate.json  routes.ts  server.bundle.js  server.ts  tsconfig.json
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
astro-fastify/: README.md  astro.config.ts  package.json  pnpm-lock.yaml  server.js
astro-fastify-ssg/: README.md  package.json  pnpm-lock.yaml  server.js
astro-ssg/: astro.config.mjs  package.json
better-call/: deno.json  main.ts  main_test.ts
bitnet/: Dockerfile  README.md
bolt/: README.md  deno.json  main.ts
bun/: bun.lockb  hello.test.ts  hello.ts  package.json  tsconfig.json
caddy-docker-proxy/: Dockerfile  compose.yml
caddy-md/: Caddyfile  README.md  compose.yml
cargo-script/: README.md  hello.rs
components/: kaburi.jsx  percentage.jsx  vad.jsx
dagger/: app.cue
deno/: README.md  add.test.ts  (+7 more)
deno-playwright/: README.md  deno.json  main.ts
spec-kit-sudoku/: Cargo.toml  README.md  clippy.toml  rustfmt.toml
spec-kit-sudoku/.claude/commands/: plan.md
spec-kit-sudoku/scripts/: common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
spec-kit-sudoku/src/: lib.rs  main.rs
spec-kit-sudoku/src/models/: cell.rs  errors.rs  game_state.rs  grid.rs  mod.rs  puzzle.rs
spec-kit-sudoku/src/services/: mod.rs  puzzle_generator.rs  save_load.rs  validator.rs
spec-kit-sudoku/tests/contract/: mod.rs  test_grid_api.rs  test_puzzle_api.rs
(+420 files in other folders)
