[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
clap = "4.5.47"
env_logger = "0.11.8"
rand = "0.9.2"
ratatui = "0.29.0"
serde = "1.0.219"

[dev-dependencies]
proptest = "1.7.0"

[[test]]
name = "contract"
path = "tests/contract/mod.rs"

[[test]]
name = "integration" 
path = "tests/integration/mod.rs"
